--- a/markup/partials/drawerContent/FHI-Ventures-is-launched-to-scale-impact.hbs
+++ b/markup/partials/drawerContent/FHI-Ventures-is-launched-to-scale-impact.hbs
@@ -1,10 +1,35 @@
 <h1 class="drawer-title">FHI Ventures is launched to scale impact</h1>
-<p><img alt="FHI Ventures logo" src="http://designlab360.org/ar/2018/images/FHI_Ventures_DRAWER_fhi_ventures_logo@2x.png" style="float: left;margin-right: 15px; width: 150px;" width="150">Social entrepreneurs solve problems, developing products and services with the potential to save and improve lives on a global scale. But, without funding and support, good ideas are unlikely to become profitable businesses that reach those who benefit from new products and services.</p>
-<p>In 2018, FHI 360 launched FHI Ventures, a for-profit impact-investing subsidiary dedicated to accelerating the growth of early-stage social enterprises that employ commercial strategies for improvements in development. FHI Ventures invests capital into a small group of companies, aligned with FHI 360's mission, to position them to attract further funding and expand the reach of their products. FHI Ventures also offers individualized coaching and advisory support to develop business strategy, raise capital and manage growth. FHI 360's global reach provides an opportunity to source viable business innovations and attract potential investors.</p>
-<p>FHI Ventures selected five companies for the inaugural group through a highly competitive process. These early-stage companies offer novel products designed to solve pressing development challenges: the spread of infectious disease and lack of clean water and basic sanitation. FyodorBio makes a urine test that can rapidly diagnose malaria, and UrSure produces a patient-friendly urine test that supports adherence to HIV prevention drugs. Sanivation provides sanitation services that transforms human waste into affordable fuel, and SweetSense makes remote sensors that improve the reliability of public water utilities in emerging economies. The fifth company, Mark Labs, offers a tool to improve better decision-making in the human development sector through a technology platform that quantifies social impact for investors.  </p>
-<h2>Investments that can change the world  </h2>
-<p>Since entering the FHI Ventures program, all five companies have experienced measurable business growth, have cumulatively raised an additional US$1.6 million thus far and are actively pursuing partnership opportunities to scale into new markets. Describing the impact that participating in the program has had on his company, Giffin Daughtridge, Chief Executive Officer of UrSure, said, "While the [financial] investment is great, the amount of additional resources and the network that comes with being part of the FHI 360 family have proved to be an accelerator for us in every sense of the word."</p>
-<p>FHI 360 continues to partner with the inaugural portfolio companies, and selection of the next round of FHI Ventures investments is underway.  </p>
-<p>Learn more about FHI 360's <a href="https://www.fhi360.org/partner-us/fhi360-family" target="_blank">family</a> of subsidiaries. </p>
+<p><img alt="FHI Ventures logo"
+    src="http://designlab360.org/ar/2018/images/FHI_Ventures_DRAWER_fhi_ventures_logo@2x.png"
+    style="margin-right: 15px; width: 150px;margin-bottom:0;" width="150"></p>
+<p>Social entrepreneurs solve
+  problems, developing products and services with the potential to save and improve lives on a global scale. But,
+  without funding and support, good ideas are unlikely to become profitable businesses that reach those who benefit from
+  new products and services.</p>
+<p>In 2018, FHI 360 launched FHI Ventures, a for-profit impact-investing subsidiary dedicated to accelerating the growth
+  of early-stage social enterprises that employ commercial strategies for improvements in development. FHI Ventures
+  invests capital into a small group of companies, aligned with FHI 360's mission, to position them to attract further
+  funding and expand the reach of their products. FHI Ventures also offers individualized coaching and advisory support
+  to develop business strategy, raise capital and manage growth. FHI 360's global reach provides an opportunity to
+  source viable business innovations and attract potential investors.</p>
+<p>FHI Ventures selected five companies for the inaugural group through a highly competitive process. These early-stage
+  companies offer novel products designed to solve pressing development challenges: the spread of infectious disease and
+  lack of clean water and basic sanitation. FyodorBio makes a urine test that can rapidly diagnose malaria, and UrSure
+  produces a patient-friendly urine test that supports adherence to HIV prevention drugs. Sanivation provides sanitation
+  services that transform human waste into affordable fuel, and SweetSense makes remote sensors that improve the
+  reliability of public water utilities in emerging economies. The fifth company, Mark Labs, offers a tool to improve
+  decision-making in the human development sector through a technology platform that quantifies social impact for
+  investors. </p>
+<h2>Investments that can change the world </h2>
+<p>Since entering the FHI Ventures program, all five companies have experienced measurable business growth, have
+  cumulatively raised an additional US$1.6 million thus far and are actively pursuing partnership opportunities to scale
+  into new markets. Describing the impact that participating in the program has had on his company, Giffin Daughtridge,
+  Chief Executive Officer of UrSure, said, "While the [financial] investment is great, the amount of additional
+  resources and the network that comes with being part of the FHI 360 family have proved to be an accelerator for us in
+  every sense of the word."</p>
+<p>FHI 360 continues to partner with the inaugural portfolio companies, and selection of the next round of FHI Ventures
+  investments is underway. </p>
+<p>Learn more about FHI 360's <a href="https://www.fhi360.org/partner-us/fhi360-family" target="_blank">family</a> of
+  subsidiaries. </p>
 <hr>
 <p><strong>FHI 360 subsidiary:</strong> <a href="https://www.fhiventures.com/" target="_blank">FHI Ventures</a></p>
