--- a/markup/partials/drawerContent/Girl-power.hbs
+++ b/markup/partials/drawerContent/Girl-power.hbs
@@ -1,21 +1,46 @@
-<h1 class="drawer-title">Girl power</h1> 
+<h1 class="drawer-title">Girl power</h1>
 <p class="drawer-subtitle"><strong class="uppercase">Jane Nyathi<br>
-Zimbabwe</strong></p>
-<p><img src="../img/slides/Matopo.jpeg" alt="Young woman having a conversation with an adolescent girl.">Girls and young women can be powerful agents for change, but far too many are denied opportunities to develop the self-confidence that is key to taking control of their destinies.</p>
-<p>Jane Nyathi is not one of them. The 24-year-old is an assistant program officer for the Determined, Resilient, Empowered, AIDS-free, Mentored and Safe Women (DREAMS) public-private <a href="https://www.pepfar.gov/partnerships/ppp/dreams/" target="_blank">partnership</a> in Zimbabwe.</p>
-<p>Based in Bulawayo, <strong>Zimbabwe's</strong> second largest city, Jane, along with her colleagues, focuses on reducing new HIV infections among adolescent girls and young women ages 15 to 24 in six high-HIV-burden districts.</p>
-<p>Through DREAMS, FHI 360 delivers a comprehensive curriculum that focuses on HIV prevention, positive gender norms and building social assets, including social safety nets through mentors, peer groups, civic engagement and access to health information and services. The curriculum is targeted toward adolescent girls and young women and their sexual partners.</p>
-<p>The need is great, and obstacles for young women, who should be looking toward the future with hope and optimism, can seem insurmountable. Poverty, gender inequality, sexual violence, social isolation and limited schooling increase adolescent girls' and young women's vulnerability to HIV. "Young women in Zimbabwe are sometimes in relationships so that they can survive," said Jane. "It is difficult in Zimbabwe for you to even have a dollar to spend on anything or to buy credit for your phone."</p>
+    Zimbabwe</strong></p>
+<p><img src="../img/slides/Matopo.jpeg" alt="Young woman having a conversation with an adolescent girl.">Girls and young
+  women can be powerful agents for change, but far too many are denied opportunities to develop the self-confidence that
+  is key to taking control of their destinies.</p>
+<p>Jane Nyathi is not one of them. The 24-year-old is an assistant program officer for the Determined, Resilient,
+  Empowered, AIDS-free, Mentored and Safe Women (DREAMS) public-private <a
+    href="https://www.pepfar.gov/partnerships/ppp/dreams/" target="_blank">partnership</a> in Zimbabwe.</p>
+<p>Based in Bulawayo, <strong>Zimbabwe's</strong> second largest city, Jane, along with her colleagues, focuses on
+  reducing new HIV infections among adolescent girls and young women ages 15 to 24 in six high-HIV-burden districts.</p>
+<p>Through DREAMS, FHI 360 delivers a comprehensive curriculum that focuses on HIV prevention, positive gender norms and
+  building social assets, including social safety nets through mentors, peer groups, civic engagement and access to
+  health information and services. The curriculum is targeted toward adolescent girls and young women and their sexual
+  partners.</p>
+<p>The need is great, and obstacles for young women, who should be looking toward the future with hope and optimism, can
+  seem insurmountable. Poverty, gender inequality, sexual violence, social isolation and limited schooling increase
+  adolescent girls' and young women's vulnerability to HIV. "Young women in Zimbabwe are sometimes in relationships so
+  that they can survive," said Jane. "It is difficult in Zimbabwe for you to even have a dollar to spend on anything or
+  to buy credit for your phone."</p>
 <h2>Building confidence and skills</h2>
-<p>Jane has daily conversations with adolescent girls about how to access sexual and reproductive health and HIV services. She talks with community leaders about changing the gender norms and stigmas attached to using reproductive health services. She works with educational service providers who help adolescent girls go back to school or receive vocational training. And, she also helps adolescent girls develop their own income-generating activities.
+<p>Jane has daily conversations with adolescent girls about how to access sexual and reproductive health and HIV
+  services. She talks with community leaders about changing the gender norms and stigmas attached to using reproductive
+  health services. She works with educational service providers who help adolescent girls go back to school or receive
+  vocational training. And, she also helps adolescent girls develop their own income-generating activities.
 </p>
-<p>"My hope is that each and every girl in Zimbabwe will have the opportunity to fully reach her highest potential in life," said Jane. "If they are able to be independent, to be financially stable, to be who they want to be, I believe that we will have a better Zimbabwe."</p>
-<p>In fiscal year 2018, FHI 360 reached about 42,500 adolescent girls in school and about 76,000 adolescent girls out of school with information on HIV prevention and gender norms. More than 22,000 community members received HIV prevention services.</p>
-<p>Jane is an example of how empowering girls unleashes unlimited possibilities. She started with the program as a member of a DREAMS club in 2016, was hired by FHI 360 as a district facilitator and has been promoted to her current position. "DREAMS is what I am today," she said. "The program has made me want to make so many changes in other people's lives."  </p>
-<p>This past year, Jane demonstrated her leadership on a global stage. At the 2018 International Conference on Family Planning in Rwanda, Jane spoke for the 600 youth who attended the conference and offered her views on the importance of investments in family planning. Said Jane of the experience, "It was just the beginning of all of my dreams."</p>
-<p>Watch <a href="https://www.icfphub.org/class/livestream-morning-plenary/?wcs_timestamp=1542097800" target="_blank">Jane's participation</a> at the conference.</p>
+<p>"My hope is that each and every girl in Zimbabwe will have the opportunity to fully reach her highest potential in
+  life," said Jane. "If they are able to be independent, to be financially stable, to be who they want to be, I believe
+  that we will have a better Zimbabwe."</p>
+<p>In fiscal year 2018, FHI 360 reached about 42,500 adolescent girls in school and about 76,000 adolescent girls out of
+  school with information on HIV prevention and gender norms. More than 22,000 community members received HIV prevention
+  services.</p>
+<p>Jane is an example of how empowering girls unleashes unlimited possibilities. She started with the program as a
+  member of a DREAMS club in 2016, was hired by FHI 360 as a district facilitator and has been promoted to her current
+  position. "DREAMS is what I am today," she said. "The program has made me want to make so many changes in other
+  people's lives." </p>
+<p>This past year, Jane demonstrated her leadership on a global stage. At the 2018 International Conference on Family
+  Planning in Rwanda, Jane spoke for the 600 youth who attended the conference and offered her views on the importance
+  of investments in family planning. Said Jane of the experience, "It was just the beginning of all of my dreams."</p>
+<p>Watch <a href="https://www.icfphub.org/class/livestream-morning-plenary/?wcs_timestamp=1542097800"
+    target="_blank">Jane's participation</a> at the conference.</p>
 <hr>
 <p><strong>Project:</strong> Determined, Resilient, Empowered, AIDS-free, Mentored and Safe Women (DREAMS) </p>
 <p><strong>Funder:</strong> USAID, U.S. President&rsquo;s Emergency Plan for AIDS Relief</p>
 <hr>
-<p>Photo credit: Courtesy of Jane Nyathi</p>
+<p class="drawer-photo-credit">Photo credit: Courtesy of Jane Nyathi</p>
