--- a/markup/partials/drawerContent/Moving-closer-to-wiping-out-neglected-diseases.hbs
+++ b/markup/partials/drawerContent/Moving-closer-to-wiping-out-neglected-diseases.hbs
@@ -1,10 +1,26 @@
 <h1 class="drawer-title">Moving closer to wiping out neglected diseases</h1>
 <p class="drawer-subtitle"><strong class="uppercase">Laos</strong></p>
-<p>Neglected tropical diseases (NTDs) &mdash; often caused by parasites, mosquitoes and worms&mdash; affect the health of more than one billion people worldwide, causing pain, disability and, in some cases, death. For many NTDs, annual one-dose treatments and education around healthy behavior can make a dramatic impact &nbsp;&mdash; one that is highly cost-effective. In Laos, FHI 360 has been working with the government to control and eliminate the country's most prevalent NTDs.  </p>
-<p><strong>Lymphatic filariasis</strong> (commonly known as elephantiasis): FHI 360 assisted the Ministry of Health in conducting the annual mass drug administration in Attapu Province, the only one in Laos where lymphatic filariasis was endemic. Due to the success of this effort, the World Health Organization confirmed that Laos is close to eliminating lymphatic filariasis and may now shift away from expensive mass treatment campaigns.  </p>
-<p><strong>Schistosomiasis</strong> (commonly known as snail fever): An integrated public health and education approach is supporting ongoing efforts to control this disease. In a collaboration between the Ministry of Education and the Ministry of Health, FHI 360 supported the training of 143 school teachers as part of the schistosomiasis control program in Champasak Province, where the disease is endemic. The teachers learned how to promote healthy prevention behaviors and ways to support mass drug administrations.  </p>
-<p><strong>Soil-transmitted helminthes</strong> (hookworm, roundworm and whipworm): A partnership with the Ministry of Health and the Ministry of Education and Sport supported a school-based deworming program for about two million children ages 6 to 14 years. FHI 360 organized trainings that prepared 3,000 teachers and principals in nine provinces to work with children and their parents to prevent and treat the disease.  </p>
-<p>FHI 360 also worked with the Ministry of Health to strengthen its capacity to manage the national NTD program, including the development of work plans, budgets and reports to ensure sustainable funding and effective systems to assess the impact of program activities. </p>
+<p>Neglected tropical diseases (NTDs) &mdash; often caused by parasites, mosquitoes and worms &mdash; affect the health
+  of more than one billion people worldwide, causing pain, disability and, in some cases, death. For many NTDs, annual
+  one-dose treatments and education around healthy behavior can make a dramatic impact &mdash; one that is highly
+  cost-effective. In Laos, FHI 360 has been working with the government to control and eliminate the country's most
+  prevalent NTDs. </p>
+<p><strong>Lymphatic filariasis</strong> (commonly known as elephantiasis): FHI 360 assisted the Ministry of Health in
+  conducting the annual mass drug administration in Attapu Province, the only one in Laos where lymphatic filariasis was
+  endemic. Due to the success of this effort, the World Health Organization confirmed that Laos is close to eliminating
+  lymphatic filariasis and may now shift away from expensive mass treatment campaigns. </p>
+<p><strong>Schistosomiasis</strong> (commonly known as snail fever): An integrated public health and education approach
+  is supporting ongoing efforts to control this disease. In a collaboration between the Ministry of Education and the
+  Ministry of Health, FHI 360 supported the training of 143 school teachers as part of the schistosomiasis control
+  program in Champasak Province, where the disease is endemic. The teachers learned how to promote healthy prevention
+  behaviors and ways to support mass drug administrations. </p>
+<p><strong>Soil-transmitted helminthes</strong> (hookworm, roundworm and whipworm): A partnership with the Ministry of
+  Health and the Ministry of Education and Sports supported a school-based deworming program for about two million
+  children ages 6 to 14 years. FHI 360 organized trainings that prepared 3,000 teachers and principals in nine provinces
+  to work with children and their parents to prevent and treat the infections. </p>
+<p>FHI 360 also worked with the Ministry of Health to strengthen its capacity to manage the national NTD program,
+  including the development of work plans, budgets and reports to ensure sustainable funding and effective systems to
+  assess the impact of program activities. </p>
 <hr>
 <p><strong>Project:</strong> Neglected Tropical Disease Support in Laos </p>
 <p><strong>Funder:</strong> Margaret A. Cargill Philanthropies </p>
