--- a/markup/partials/drawerContent/Youre-hired-21st-century-career-centers.hbs
+++ b/markup/partials/drawerContent/Youre-hired-21st-century-career-centers.hbs
@@ -1,16 +1,51 @@
-<h1 class="drawer-title">You're hired: 21st-century career centers</h1> 
+<h1 class="drawer-title">You're hired: 21st-century career centers</h1>
 <p class="drawer-subtitle"><strong class="uppercase">Kenza Elbouazzaoui<br>
-Morocco</strong></p>
-<p><img src="http://fhi360internalnewsletters.azurewebsites.net/ar-2018/Career%20Center_-10_DRAWER_web.jpg" alt="Students on computers in the career center">There was a time when Kenza Elbouazzaoui, a graduate student in materials science engineering, worried about finding a job. In <strong>Morocco</strong>, more than 18 percent of university or vocational training graduates are unemployed, and young women face an even higher disadvantage. While graduates are eager to work, they do not know how to navigate the job market and find positions that match their competencies and interests. At the same time, employers cannot find candidates with the skills they need. This situation creates uncertainty for young jobseekers. Kenza was no exception. "I was scared," she said. "I didn't understand that jobs were even available."</p>
+    Morocco</strong></p>
+<p><img src="http://fhi360internalnewsletters.azurewebsites.net/ar-2018/Career%20Center_-10_DRAWER_web.jpg"
+    alt="Students on computers in the career center">There was a time when Kenza Elbouazzaoui, a graduate student in
+  materials science engineering, worried about finding a job. In <strong>Morocco</strong>, more than 18 percent of
+  university or vocational training graduates are unemployed, and young women face an even higher disadvantage. While
+  graduates are eager to work, they do not know how to navigate the job market and find positions that match their
+  competencies and interests. At the same time, employers cannot find candidates with the skills they need. This
+  situation creates uncertainty for young jobseekers. Kenza was no exception. "I was scared," she said. "I didn't
+  understand that jobs were even available."</p>
 <h2>Bridging the gap between employers and youth</h2>
-<p> The USAID Career Center project in Morocco has partnered with universities and technical and vocational education and training institutions to open six pilot centers on campuses in three cities, plus a virtual center to cater to those not enrolled in public institutions. These career centers prepare students for employment in high-growth sectors. Real-time, localized information about job market trends and opportunities is coupled with work readiness training, internships and networking opportunities that connect students and employers. To ensure that the needs of youth were met, youth were involved in building and branding the centers, designing facilities and developing services, all of which hold the youth who manage the centers accountable for the success of the centers.</p>
-<p>This cutting-edge model uses data and industry-specific analyses from private-sector employment trends to develop curricula and services in a manner not offered before in Morocco. A defining feature is the significant role that businesses play in the design and delivery of activities, including "Sunrise Briefings," which provide a forum for employers to share their needs and industry insights with career centers and university faculty to respond better to labor market needs. This systems approach encourages stronger connections between the public and private sectors, educators, employers, government and youth.</p>
+<p> The USAID Career Center project in Morocco has partnered with universities and technical and vocational education
+  and training institutions to open six pilot centers on campuses in three cities, plus a virtual center to cater to
+  those not enrolled in public institutions. These career centers prepare students for employment in high-growth
+  sectors. Real-time, localized information about job market trends and opportunities is coupled with work readiness
+  training, internships and networking opportunities that connect students and employers. To ensure that the needs of
+  youth were met, youth were involved in building and branding the centers, designing facilities and developing
+  services, all of which hold the youth who manage the centers accountable for the success of the centers.</p>
+<p>This cutting-edge model uses data and industry-specific analyses from private-sector employment trends to develop
+  curricula and services in a manner not offered before in Morocco. A defining feature is the significant role that
+  businesses play in the design and delivery of activities, including "Sunrise Briefings," which provide a forum for
+  employers to share their needs and industry insights with career centers and university faculty to respond better to
+  labor market needs. This systems approach encourages stronger connections between the public and private sectors,
+  educators, employers, government and youth.</p>
 <h2>Practical skills for real-world jobs</h2>
-<p>At the career center, Kenza obtained a better understanding of labor market demand and learned what resources were available, where to look for employment opportunities and how to use the center's job search tool to identify energy-sector positions relevant to her field of study &mdash; jobs that were difficult to find elsewhere. "Using the virtual tool, we can explore all the jobs that are available to us in our region. It [the tool] is very easy," she explained.</p>
-<p>Center staff, predominantly youth themselves, take the time to get to know the students individually so that they can personalize services. Counselors host workshops and help students articulate their professional and personal goals. Career Center Youth Ambassadors, such as Kenza, support the centers in organizing events. Through their efforts encouraging their peers to take advantage of center services, youth ambassadors also build their own leadership and public-speaking skills. Kenza, for example, created and launched a "Digital Days" event for digital experts to share advice on jobs in that sector.</p>
-<p>In Morocco, career centers are catching on. More than 86,000 students in 2018 used the career center services and almost 16,000 students completed workforce readiness training. The virtual career center logged more than 500,000 page views, and nearly 29,000 individuals registered with the site. The project worked in partnership with 126 companies or business organizations. Although the career centers are more focused on youth employability than job placement, a 2018 survey of virtual center users shows that more than 63 percent of respondents found a job or internship.</p>
-<p>The career center experience can be transformative, helping students to understand career pathways and the skills and education required to get there. Kenza now has a sense of direction and possibility, aiming to finish her studies and pursue a career in materials science in the energy sector.</p>
+<p>At the career center, Kenza obtained a better understanding of labor market demand and learned what resources were
+  available, where to look for employment opportunities and how to use the center's job search tool to identify
+  energy-sector positions relevant to her field of study &mdash; jobs that were difficult to find elsewhere. "Using the
+  virtual tool, we can explore all the jobs that are available to us in our region. It [the tool] is very easy," she
+  explained.</p>
+<p>Center staff, predominantly youth themselves, take the time to get to know the students individually so that they can
+  personalize services. Counselors host workshops and help students articulate their professional and personal goals.
+  Career Center Youth Ambassadors, such as Kenza, support the centers in organizing events. Through their efforts
+  encouraging their peers to take advantage of center services, youth ambassadors also build their own leadership and
+  public-speaking skills. Kenza, for example, created and launched a "Digital Days" event for digital experts to share
+  advice on jobs in that sector.</p>
+<p>In Morocco, career centers are catching on. More than 86,000 students in 2018 used the career center services and
+  almost 16,000 students completed workforce readiness training. The virtual career center logged more than 500,000 page
+  views, and nearly 29,000 individuals registered with the site. The project worked in partnership with 126 companies or
+  business organizations. Although the career centers are more focused on youth employability than job placement, a 2018
+  survey of virtual center users shows that more than 63 percent of respondents found a job or internship.</p>
+<p>The career center experience can be transformative, helping students to understand career pathways and the skills and
+  education required to get there. Kenza now has a sense of direction and possibility, aiming to finish her studies and
+  pursue a career in materials science in the energy sector.</p>
 <hr>
-<p><strong>Project:</strong> <a href="https://www.fhi360.org/projects/usaid-career-center" target="_blank">USAID Career Center</a></p>
+<p><strong>Project:</strong> <a href="https://www.fhi360.org/projects/usaid-career-center" target="_blank">USAID Career
+    Center</a></p>
 <p><strong>Funder:</strong> USAID</p>
-<p>Photo credit: Amira Azzouzi/FHI 360</p>
+<hr>
+<p class="drawer-photo-credit">Photo credit: Amira Azzouzi/FHI 360</p>
