--- a/markup/partials/drawerContent/Youth-get-a-second-chance.hbs
+++ b/markup/partials/drawerContent/Youth-get-a-second-chance.hbs
@@ -1,19 +1,49 @@
 <h1 class="drawer-title">Youth get a second chance</h1>
 <p class="drawer-subtitle"><strong class="uppercase">Christopher Collins<br>
-United States</strong></p>
-<p><img src="http://fhi360internalnewsletters.azurewebsites.net/ar-2018/Compass%20Rose%201022_DRAWER_web.jpg" alt="Young man speaking to mentor">As a young boy, Christopher Collins showed promise. He loved to play sports, attended a gifted and talented program in middle school and graduated from high school. But growing up in a high-crime neighborhood in St. Louis stacked the deck against him. At 21 years of age, Christopher was arrested for gun possession and served 20 months in jail for a Class D felony. </p>
-<p>Making it on your own can be daunting for any young adult in the <strong>United States</strong>. But, youth who have recently been incarcerated face staggering challenges. Many of them lack the safety net provided by family, friends and social services. With little or no work experience and a limited education, they struggle to find jobs. Employers often do not hire them after seeing their criminal records. This cycle of wanting a job but repeatedly being rejected makes them vulnerable to recidivism.</p>
-<p>Chris did not know where to turn when he finished his sentence. He did not have a social security card or government-sponsored identification needed to get a job. "I was lost," he said. "It was like, who do you ask for help when you get out of jail?"</p>
-<p>Then he met Tasha Robinson, who was recruiting youth participants for the Compass Rose Collaborative, which helps young people between the ages of 18 and 24 transition from the justice system into productive employment or education. "I gave them my number, and they actually called me back the next day. Ever since then, everything was easy, because I had a support system. I had a mentor."</p>
+    United States</strong></p>
+<p><img src="http://fhi360internalnewsletters.azurewebsites.net/ar-2018/Compass%20Rose%201022_DRAWER_web.jpg"
+    alt="Young man speaking to mentor">As a young boy, Christopher Collins showed promise. He loved to play sports,
+  attended a gifted and talented program in middle school and graduated from high school. But growing up in a high-crime
+  neighborhood in St. Louis stacked the deck against him. At 21 years of age, Christopher was arrested for gun
+  possession and served 20 months in jail for a Class D felony. </p>
+<p>Making it on your own can be daunting for any young adult in the <strong>United States</strong>. But, youth who have
+  recently been incarcerated face staggering challenges. Many of them lack the safety net provided by family, friends
+  and social services. With little or no work experience and a limited education, they struggle to find jobs. Employers
+  often do not hire them after seeing their criminal records. This cycle of wanting a job but repeatedly being rejected
+  makes them vulnerable to recidivism.</p>
+<p>Chris did not know where to turn when he finished his sentence. He did not have a social security card or
+  government-sponsored identification needed to get a job. "I was lost," he said. "It was like, who do you ask for help
+  when you get out of jail?"</p>
+<p>Then he met Tasha Robinson, who was recruiting youth participants for the Compass Rose Collaborative, which helps
+  young people between the ages of 18 and 24 transition from the justice system into productive employment or education.
+  "I gave them my number, and they actually called me back the next day. Ever since then, everything was easy, because I
+  had a support system. I had a mentor."</p>
 <h2>A pathway to productive employment</h2>
-<p>Through Compass Rose, Chris participated in apprenticeships for building, carpentry and other skills. He learned how to create a budget and manage money and how to write a resume, dress for an interview and communicate with employers about his background and qualifications. He credits Tasha, his mentor, for pushing him &mdash; for never giving up on him.</p>
-<p>Launched in 2017 and now active in eight U.S. cities, Compass Rose recruits youth from neighborhoods with crime and poverty rates exceeding 30 percent. The young participants are given options to pursue their education, gain vocational skills or seek employment. They also receive assistance with basic needs, such as housing, food assistance, transportation, child care and legal services, and access to a caring adult to provide support along their journey. FHI 360 leads Compass Rose and coordinates partners, activities and action plans across all sites. In St. Louis, for example, Compass Rose works in partnership with SLATE (the St. Louis Agency on Training and Employment), which conducts the program activities available to Chris.</p>
-<p>By the end of 2018, halfway through the grant, data from the first three cities that participated in the collaborative showed that of the 375 young people who participated, 64 percent received job skills training, 25 percent held apprenticeships and 30 percent earned a vocational certification. Almost 50 percent of participants have gone on to further education or employment. The program will serve more than 1,100 young people by 2021.</p>
-<p>Chris now has a full-time job as a machine operator but dreams of being an entrepreneur. He is also focused on being a good father to his daughter, who was born in December 2018.</p>
+<p>Through Compass Rose, Chris participated in apprenticeships for building, carpentry and other skills. He learned how
+  to create a budget and manage money and how to write a resume, dress for an interview and communicate with employers
+  about his background and qualifications. He credits Tasha, his mentor, for pushing him &mdash; for never giving up on
+  him.</p>
+<p>Launched in 2017 and now active in eight U.S. cities, Compass Rose recruits youth from neighborhoods with crime and
+  poverty rates exceeding 30 percent. The young participants are given options to pursue their education, gain
+  vocational skills or seek employment. They also receive assistance with basic needs, such as housing, food assistance,
+  transportation, child care and legal services, and access to a caring adult to provide support along their journey.
+  FHI 360 leads Compass Rose and coordinates partners, activities and action plans across all sites. In St. Louis, for
+  example, Compass Rose works in partnership with SLATE (the St. Louis Agency on Training and Employment), which
+  conducts the program activities available to Chris.</p>
+<p>By the end of 2018, halfway through the grant, data from the first three cities that participated in the
+  collaborative showed that of the 375 young people who participated, 64 percent received job skills training, 25
+  percent held apprenticeships and 30 percent earned a vocational certification. Almost 50 percent of participants have
+  gone on to further education or employment. The program will serve more than 1,100 young people by 2021.</p>
+<p>Chris now has a full-time job as a machine operator but dreams of being an entrepreneur. He is also focused on being
+  a good father to his daughter, who was born in December 2018.</p>
 <p>"I have a lot of ideas," he said. "I am just trying to get a start."</p>
-<p><em style="font-size: 85%;">The Compass Rose Collaborative is funded through the U.S. Department of Labor's Reentry Project. The $4.5 million federal award supports work in Hartford, CT; St. Louis, MO; and Los Angeles, CA. Local funding also supports the project.</em></p>
+<p><em style="font-size: 85%;">The Compass Rose Collaborative is funded through the U.S. Department of Labor's Reentry
+    Project. The $4.5 million federal award supports work in Hartford, CT; St. Louis, MO; and Los Angeles, CA. Local
+    funding also supports the project.</em></p>
 <hr>
-<p><strong>Project:</strong> <a href="https://www.fhi360.org/news/new-award-us-department-labor-support-youth-criminal-justice-system-transitioning-education-and" target="_blank">Compass Rose Collaborative</a></p>
+<p><strong>Project:</strong> <a
+    href="https://www.fhi360.org/news/new-award-us-department-labor-support-youth-criminal-justice-system-transitioning-education-and"
+    target="_blank">Compass Rose Collaborative</a></p>
 <p><strong>Funder:</strong> U.S. Department of Labor, Reentry Project</p>
 <hr>
-<p>Photo credit: Leanne Gray/FHI 360</p>
+<p class="drawer-photo-credit">Photo credit: Leanne Gray/FHI 360</p>
